Replace "new Integer(i)" by "Integer.valueOf(i)". For values between -127 and 128 this is much faster (on the current Sun Java windows implementation), and the effect is the same (Integers are immutable).
git-svn-id: svn://source.pentaho.org/svnkettleroot/mirror/Kettle/trunk@2480 5fb7f6ec-07c1-534a-b4ca-9155e429e800