@@ -288,7 +288,7 @@ class ScriptValuesHighlight implements LineStyleListener {
 		 */
 		void initialize() {
 			fgKeys= new Hashtable();
-			Integer k= new Integer(KEY);
+			Integer k= Integer.valueOf(KEY);
 			for (int i= 0; i < fgKeywords.length; i++)
 				fgKeys.put(fgKeywords[i], k);
 		}
@@ -299,7 +299,7 @@ class ScriptValuesHighlight implements LineStyleListener {
 		
 		void initializeETLFunctions(){
 			kfKeys = new Hashtable();
-			Integer k = new Integer(FUNCTIONS);
+			Integer k = Integer.valueOf(FUNCTIONS);
 			for (int i= 0; i < kfKeywords.length; i++)
 				kfKeys.put(kfKeywords[i], k);
 		}
